updated documentation, ci, updated si prefixes